Fix: Remove extra scrollbar from modal backdrop

--- a/css/styles.css
+++ b/css/styles.css
@@ -6478,7 +6478,7 @@ a[href^="mailto"] {
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(5px);
 }
